# Grandma

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  grandma-loaders.html  install.sh  pyproject.toml
.github/workflows/: ci-summarizer.yml  ci.yml  publish.yml  rotate-grandma.yml
integrations/aider/: grandma-aider
integrations/claude-code/: hook.py  settings-snippet.json
integrations/cline/: .mcp.json  cline-rules.md
integrations/codex-cli/: codex-snippet.json  hook.py
integrations/continue/: config-snippet.json
integrations/cursor/: .mcp.json
integrations/cursor/.cursor/rules/: grandma.mdc
integrations/gemini-cli/: hook.py  settings-snippet.json
integrations/goose/.goose/: config.yaml
integrations/openhands/: grandma-openhands
integrations/windsurf/: .mcp.json  .windsurfrules
integrations/zed/: settings-snippet.json
scripts/: release.sh
skill/: grandma.md
src/grandma/: _spinners.py  card.py  cli.py  extractor.py  mcp_server.py  models.py
src/grandma/commands/: config.py  doctor.py  replay.py
tests/: test_extractor.py
